@@ -1,3 +1,9 @@
+1999-12-29  Chris Rankin  <rankinc@zipworld.com.au>
+
+	* fvwm/bindings.c:
+	Fixed build problem on machines without STROKE support.
+	Also fixed TAB-busted indentation.
+
 1999-12-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/ColorUtils.c:
